# rotten-tomatoes-analysis

./: .dockerignore  .gitignore  BACKFILL_ALL_OVERNIGHT_ATTEMPT_1.MD  CLAUDE.md  Dockerfile  README.MD  metadata.yml  most_recent_build.md  movies.json  pyproject.toml  reviews.db.bak  rotten_tomatoes.py  selenium_findings.md
deploy/: alert-policy.json  backup_db.sh  cleanup_csv.sh  ops-agent-config.yaml  rt-datasette.service  setup_vm.sh
plan/: 00_overview.md  01_gcp_setup.md  03_secret_manager.md  04_scraper_rewrite.md  06_artifact_registry.md  07_cloud_run_job.md  09_github_actions.md  11_verification.md  12_cleanup.md  backfill_anti_blocking.md  backfill_date_parsing.md  backfill_time_end.md  new_feature_protocol.md  plan_execution.md  questions.md
plan/errors/: chrome.md  (+7 more)
planning/: new_feature_protocol.md
scripts/: backfill.py  fix_top_critic.py
web/: pyproject.toml
web/app/: cache.py  config.py  db.py  main.py  templating.py
web/app/math/: critics.py  scoring.py  sentiment.py  timing.py
web/app/routers/: analytics.py  reports.py  reviews.py
web/app/services/: analytics_service.py  report_service.py  review_service.py
web/app/static/: app.js  style.css
web/app/templates/: analytics.html  base.html  reports.html  reviews.html
web/app/templates/partials/: calculation.html  chart.html  report_preview.html  review_table.html
web/deploy/: rt-dashboard.service
web/tests/: test_analytics_service.py  test_cache.py  test_math_critics.py  test_math_scoring.py  test_math_sentiment.py  test_math_timing.py  test_report_service.py  test_review_service.py
(+15 files in other folders)
