[project]
name = "rotten-tomatoes-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "requests>=2.32.5",
    "selenium>=4.41.0",
]

[dependency-groups]
dev = ["pytest>=8.0.0"]
