[project]
name = "rt-dashboard"
version = "0.1.0"
description = "Rotten Tomatoes analytics dashboard"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "jinja2>=3.1.0",
    "plotly>=6.0.0",
    "fpdf2>=2.8.0",
    "matplotlib>=3.10.0",
    "python-multipart>=0.0.20",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.28.0",
]
